[gd_scene load_steps=3 format=3 uid="uid://d05iuopxfqlhj"]

[ext_resource type="Theme" uid="uid://b1gv0wfdmojbx" path="res://assets/themes/chart_editor.res" id="1_pptwc"]
[ext_resource type="Script" uid="uid://dsec7v7be3ekg" path="res://scenes/instances/chart editor/new_file_popup.gd" id="1_qca52"]

[node name="New File Popup" type="Window"]
transparent_bg = true
msaa_2d = 1
oversampling_override = 1.0
title = "Create New Song"
initial_position = 1
size = Vector2i(640, 480)
exclusive = true
unresizable = true
always_on_top = true
transparent = true
min_size = Vector2i(480, 0)
theme = ExtResource("1_pptwc")
script = ExtResource("1_qca52")

[node name="SaveFolderDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Open a Directory"
initial_position = 1
size = Vector2i(640, 480)
unresizable = true
always_on_top = true
min_size = Vector2i(320, 320)
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
file_mode = 2
root_subfolder = "res://assets/songs/playable songs/"

[node name="FlowContainer" type="FlowContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
metadata/_edit_lock_ = true

[node name="Creation Presets" type="VBoxContainer" parent="FlowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="FlowContainer/Creation Presets"]
layout_mode = 2
text = "Create New"

[node name="HSeparator" type="HSeparator" parent="FlowContainer/Creation Presets"]
layout_mode = 2

[node name="Difficulty Options" type="ItemList" parent="FlowContainer/Creation Presets"]
layout_mode = 2
size_flags_vertical = 3
auto_height = true
item_count = 3
item_0/text = "Easy/Normal/Hard Only"
item_1/text = "Erect/Nightmare Only"
item_2/text = "Easy/Normal/Hard/Erect/Nightmare"

[node name="Convert Chart" type="VBoxContainer" parent="FlowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="FlowContainer/Convert Chart"]
layout_mode = 2
text = "Import Chart"

[node name="HSeparator" type="HSeparator" parent="FlowContainer/Convert Chart"]
layout_mode = 2

[node name="Format Options" type="ItemList" parent="FlowContainer/Convert Chart"]
layout_mode = 2
size_flags_vertical = 3
auto_height = true
item_count = 5
item_0/text = "V-Slice"
item_1/text = "Psych v1"
item_2/text = "Pysch v0.7"
item_3/text = "Andromeda Engine"
item_4/text = "Forever Engine"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="dir_selected" from="SaveFolderDialog" to="." method="_on_save_folder_dialog_dir_selected"]
